ManagedPackage/objects/baddogtail__Camper__c.object
<CustomObject>
    <fields>
        <fullName>baddogtail__Features__c</fullName>
        <description>Just list the basic features not specified in other fields</description>
        <label>Features</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baddogtail__Length__c</fullName>
        <description>Text entry for full length</description>
        <label>Length</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baddogtail__Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <label>Camper</label>
    <listViews>
        <fullName>baddogtail__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Camper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>